--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">conversor de temperatura</string>
+    <string name="app_name">CONVERSOR DE TEMPERATURA</string>
 </resources>
